force-app/main/default/objects/FIN_Payment__c/fields/FIN_AdjustedPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_AdjustedPaymentAmount__c</fullName>
    <label>Adjusted Payment Amount Delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>