force-app/main/default/objects/FIN_Payment__c/fields/FIN_Context__c.field-meta.xml
<CustomField>
    <fullName>FIN_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context</label>
    <referenceTo>FIN_Context__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>