force-app/main/default/objects/FIN_Payment__c/fields/FIN_Currency__c.field-meta.xml
<CustomField>
    <fullName>FIN_Currency__c</fullName>
    <label>Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>