force-app/main/default/objects/FIN_Payment__c/fields/FIN_Enriched_Tag__c.field-meta.xml
<CustomField>
    <fullName>FIN_Enriched_Tag__c</fullName>
    <label>Enriched Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>