force-app/main/default/objects/FIN_Payment__c/fields/FIN_Entity__c.field-meta.xml
<CustomField>
    <fullName>FIN_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>