force-app/main/default/objects/FIN_Payment__c/fields/FIN_EntityID__c.field-meta.xml
<CustomField>
    <fullName>FIN_EntityID__c</fullName>
    <description>Formula (Account Entity ID field)</description>
    <formula>FIN_Client__r.FIN_EntityID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity ID</label>
    <type>Text</type>
</CustomField>