force-app/main/default/objects/FIN_Payment__c/fields/FIN_FinancialResponsibilty__c.field-meta.xml
<CustomField>
    <fullName>FIN_FinancialResponsibilty__c</fullName>
    <formula>CASE(FIN_Channel__c,
  &quot;Back Office&quot;, TEXT(FIN_PaymentTypeChannel__r.FIN_Back_Office__c),
  &quot;Web&quot;, TEXT(FIN_PaymentTypeChannel__r.FIN_Web__c),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Responsibilty</label>
    <type>Text</type>
</CustomField>