force-app/main/default/objects/FIN_Payment__c/fields/FIN_Invoice__c.field-meta.xml
<CustomField>
    <fullName>FIN_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>FIN_Invoice__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>