force-app/main/default/objects/FIN_Payment__c/fields/FIN_JournalEntrySign__c.field-meta.xml
<CustomField>
    <fullName>FIN_JournalEntrySign__c</fullName>
    <formula>IF (
ISBLANK(TEXT(FIN_LibraryAssociation__r.FIN_Financial_Code__r.FIN_Financial_Chart_of_Accounts__r.FIN_Account_Type__c)),
1,
				
IF(
((TEXT(FIN_LibraryAssociation__r.FIN_Financial_Code__r.FIN_Financial_Chart_of_Accounts__r.FIN_Account_Type__c) == &apos;Asset&apos;) ||
(TEXT(FIN_LibraryAssociation__r.FIN_Financial_Code__r.FIN_Financial_Chart_of_Accounts__r.FIN_Account_Type__c) == &apos;Expenses&apos;))
, 1, -1
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal Entry Sign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>