force-app/main/default/objects/FIN_Payment__c/fields/FIN_Journalizing_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Journalizing_Status__c</fullName>
    <label>Journalizing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Journalizing_Status</valueSetName>
    </valueSet>
</CustomField>