force-app/main/default/objects/FIN_Payment__c/fields/FIN_MerchID__c.field-meta.xml
<CustomField>
    <fullName>FIN_MerchID__c</fullName>
    <externalId>true</externalId>
    <label>Merch ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>