force-app/main/default/objects/FIN_Payment__c/fields/FIN_OperatorID__c.field-meta.xml
<CustomField>
    <fullName>FIN_OperatorID__c</fullName>
    <label>Operator ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>