force-app/main/default/objects/FIN_Payment__c/fields/FIN_Order__c.field-meta.xml
<CustomField>
    <fullName>FIN_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>