force-app/main/default/objects/FIN_Payment__c/fields/FIN_Order_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Order_Approval_Status__c</fullName>
    <formula>Text(FIN_Order__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Approval Status</label>
    <type>Text</type>
</CustomField>