force-app/main/default/objects/FIN_Payment__c/fields/FIN_Payment_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Payment_Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Payment Unique ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>