force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentAdjustment__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentAdjustment__c</fullName>
    <label>Payment Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>