force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentDate__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>