force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentID__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentID__c</fullName>
    <externalId>true</externalId>
    <label>Payment ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>