force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentMerchant__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentMerchant__c</fullName>
    <label>Payment Merchant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>