force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentPlanName__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentPlanName__c</fullName>
    <label>Payment Plan Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>