force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentStatus__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>