force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentTransactionId__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentTransactionId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Payment transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>