force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentTypeChannel__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentTypeChannel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Type Channel</label>
    <referenceTo>FIN_Payment_Type_Channel__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>