force-app/main/default/objects/FIN_Payment__c/fields/FIN_PaymentUnclassified__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentUnclassified__c</fullName>
    <formula>((CONTAINS(FIN_ContractRecordType__c, &apos;Master&apos;) ||
		ISBLANK(Contract__c) || CONTAINS(Contract__r.Name,&apos;UNCLASSIFIED&apos;)) &amp;&amp; !FIN_Auto_Approved__c)
		|| !FIN_Auto_Approved__c
		|| (FIN_Sales_Unclassified__c &amp;&amp; !FIN_Auto_Approved__c)
		|| (ISBLANK(FIN_LibraryAssociation__c) &amp;&amp; !FIN_Auto_Approved__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Unclassified?</label>
    <type>Checkbox</type>
</CustomField>