force-app/main/default/objects/FIN_Payment__c/fields/FIN_Sales_Unclassified__c.field-meta.xml
<CustomField>
    <fullName>FIN_Sales_Unclassified__c</fullName>
    <formula>FIN_Order__r.FIN_Unclassified_US__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Unclassified?</label>
    <type>Checkbox</type>
</CustomField>