force-app/main/default/objects/FIN_Payment__c/fields/FIN_Settlement_Status__c.field-meta.xml
<CustomField>
    <fullName>FIN_Settlement_Status__c</fullName>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FIN_Settlement_Status</valueSetName>
    </valueSet>
</CustomField>