force-app/main/default/objects/FIN_Payment__c/fields/FIN_SystemDataLoadLog__c.field-meta.xml
<CustomField>
    <fullName>FIN_SystemDataLoadLog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>System Data Load Log</label>
    <referenceTo>FIN_SystemDataLoadLog__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>