force-app/main/default/objects/FIN_Payment__c/fields/FIN_Total_Adjusted_Payment__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Adjusted_Payment__c</fullName>
    <formula>FIN_PaymentAmount__c +  FIN_PaymentAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjusted Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>