force-app/main/default/objects/FIN_Payment__c/fields/FIN_TransactionId__c.field-meta.xml
<CustomField>
    <fullName>FIN_TransactionId__c</fullName>
    <label>Transaction Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>