force-app/main/default/objects/FIN_Payment__c/recordTypes/FIN_SWE_Payment.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Payment</fullName>
    <active>true</active>
    <label>SWE Payment</label>
</RecordType>