force-app/main/default/objects/FIN_Payment__c/recordTypes/FIN_UK_Payment.recordType-meta.xml
<RecordType>
    <fullName>FIN_UK_Payment</fullName>
    <active>true</active>
    <label>UK Payment</label>
</RecordType>