force-app/main/default/objects/FIN_Payment__c/recordTypes/FIN_US_Payment.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Payment</fullName>
    <active>true</active>
    <description>FIN US Payment Record Type</description>
    <label>FIN US Payment</label>
</RecordType>