force-app/main/default/objects/FIN_Payment__c/validationRules/Correct_Contract_Assign.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Contract_Assign</fullName>
    <active>false</active>
    <errorConditionFormula>OR((Contract__c &lt;&gt;  FIN_Order__r.ContractId) &amp;&amp;
			NOT(ISNULL(FIN_Order__r.ContractId)))</errorConditionFormula>
    <errorMessage>Payment cannot be assigned to different Contracts through direct Contract assignment and through the assigned Sale</errorMessage>
</ValidationRule>