force-app/main/default/objects/FIN_Payment__c/validationRules/Lock_Payment_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Payment_Records</fullName>
    <active>false</active>
    <errorConditionFormula>OR( 
FIN_Order_Approval_Status__c = &apos;Approved&apos;, 
FIN_Order_Approval_Status__c = &apos;Settled&apos;, 
FIN_Order_Approval_Status__c = &apos;Posted&apos;)</errorConditionFormula>
    <errorMessage>The Order Status must be updated to &apos;Open&apos; for this Payment Record to be Unlocked and editable.</errorMessage>
</ValidationRule>