force-app/main/default/objects/FIN_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FIN_PaymentID__c</columns>
    <columns>FIN_ContextName__c</columns>
    <columns>FIN_ContextID__c</columns>
    <columns>FIN_PaymentDate__c</columns>
    <columns>FIN_DepositDate__c</columns>
    <columns>FIN_Entity__c</columns>
    <columns>FIN_Client__c</columns>
    <columns>FIN_PaymentAmount__c</columns>
    <columns>FIN_Order_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>