force-app/main/default/objects/FIN_Payment__c/listViews/Approved_Payments.listView-meta.xml
<ListView>
    <fullName>Approved_Payments</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Payments</label>
</ListView>