force-app/main/default/objects/FIN_Payment__c/listViews/Copy_of_SWE_Settlement_Status_Scheduled_for.listView-meta.xml
<ListView>
    <fullName>Copy_of_SWE_Settlement_Status_Scheduled_for</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Settlement_Status__c</field>
        <operation>equals</operation>
        <value>Settled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FIN_Payment__c.FIN_SWE_Payment</value>
    </filters>
    <filters>
        <field>FIN_Region__c</field>
        <operation>equals</operation>
        <value>SWE</value>
    </filters>
    <label>SWE Settlement Status - Settled</label>
    <sharedTo>
        <group>SWE_Region</group>
    </sharedTo>
</ListView>