force-app/main/default/objects/FIN_Payment__c/listViews/FIN_US_Classified_FIN_Payment1.listView-meta.xml
<ListView>
    <fullName>FIN_US_Classified_FIN_Payment1</fullName>
    <filterScope>Queue</filterScope>
    <label>US Classified</label>
    <queue>FIN_US_Classified</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>