force-app/main/default/objects/FIN_Payment__c/listViews/Invoices_Payments_Waiting_for_approval.listView-meta.xml
<ListView>
    <fullName>Invoices_Payments_Waiting_for_approval</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Order_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Reviewed</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FIN_Payment__c.FIN_US_Payment</value>
    </filters>
    <filters>
        <field>FIN_Region__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>US Payments Waiting for Approval</label>
    <sharedTo>
        <group>US_Region</group>
    </sharedTo>
</ListView>