force-app/main/default/objects/FIN_Payment__c/listViews/My_Payments_to_Review.listView-meta.xml
<ListView>
    <fullName>My_Payments_to_Review</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FIN_ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>In Review</value>
    </filters>
    <label>My Payments to Review</label>
</ListView>