force-app/main/default/objects/FIN_Payment__c/listViews/Paid_Payments.listView-meta.xml
<ListView>
    <fullName>Paid_Payments</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_PaymentStatus__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FIN_Payment__c.FIN_US_Payment</value>
    </filters>
    <filters>
        <field>FIN_Region__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>US Paid Payments</label>
    <sharedTo>
        <group>US_Region</group>
    </sharedTo>
</ListView>