force-app/main/default/objects/FIN_Payment__c/listViews/Payments_Mapped_for_Review.listView-meta.xml
<ListView>
    <fullName>Payments_Mapped_for_Review</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FIN_Payment__c.FIN_US_Payment</value>
    </filters>
    <filters>
        <field>FIN_Region__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>US Payments Mapped for Review</label>
    <sharedTo>
        <group>US_Region</group>
    </sharedTo>
</ListView>