force-app/main/default/objects/FIN_Payment__c/listViews/Payments_not_Classified_Q.listView-meta.xml
<ListView>
    <fullName>Payments_not_Classified_Q</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Payments not Classified Queue</label>
</ListView>