force-app/main/default/objects/FIN_Payment__c/listViews/Payments_to_be_Assigned.listView-meta.xml
<ListView>
    <fullName>Payments_to_be_Assigned</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Payments to be Assigned</label>
</ListView>