force-app/main/default/objects/FIN_Payment__c/listViews/SWE_Approved_Invoices_Payments.listView-meta.xml
<ListView>
    <fullName>SWE_Approved_Invoices_Payments</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_ApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>FIN_Payment__c.FIN_SWE_Payment</value>
    </filters>
    <filters>
        <field>FIN_Region__c</field>
        <operation>equals</operation>
        <value>SWE</value>
    </filters>
    <label>SWE Approved Invoices &amp; Payments</label>
    <sharedTo>
        <group>SWE_Region</group>
    </sharedTo>
</ListView>